# ai-podcast-producer

./: .env.example  .gitignore  ARCHIVE_GUIDE.md  CHANGELOG.md  NOTION_SETUP.md  README.md  ROADMAP.md  SETUP_MAC.md  WORKFLOW_CHECKLIST.md  analyze_chapters.py  archive_and_clean.sh  assemble_video.py  debug_diarization.py  fix_speaker_assignment.py  generate_clips.py  generate_subtitles.py  generate_visual_markers.py  pyproject.toml  requirements.txt  split_audios.py  sync_to_notion.py
docs/: QUICK_START_DEBUG.md  README.md  SPEAKER_DETECTION_IMPROVEMENTS.md  TROUBLESHOOTING.md
scripts/: example_workflow.sh  upload_to_s3.sh
src/: __init__.py  config.py  utils.py
